# E2Easy-PC

./: CANONICAL_JSON.md  Cargo.toml  ESPECIFICACAO_TECNICA.md  README.md  benchmark.py  c_test.c  e2easy.h
config/: election_config.json
schemas/: election_config.schema.json  rdcv.schema.json  rdcv_prime.schema.json  rdv_prime.schema.json  signature.schema.json  zkp_output.schema.json
src/: e2easy.rs  el_gamal.rs  ffi.rs  groups.rs  io_helpers.rs  keys.rs  lib.rs  pedersen.rs  shuffler.rs  solve.py  types.rs  utils.rs  verifier.rs
src/Analysis/: solve.py  times  times2
src/groups/: bigint_mod.rs  traits.rs  u32_mod.rs
src/types/: ballot.rs  config.rs  proof.rs
