[package]
name = "mixnet-rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
chrono = "0.4.42"
hex = "0.4.3"
num-primes = "0.3.0"
rand = "0.9.1"
rand08 = { package = "rand", version = "0.8" }
sha2 = "0.10.9"
p256 = { version = "0.13", features = ["arithmetic", "ecdsa", "serde"] }
rand_core = "0.6.4"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
rayon = "1.11.0"
safer-ffi = { version = "0.1.13", features = ["headers"] }

[features]
headers = ["safer-ffi/headers"]